css/wedding.css
/* Manually adding colors to post blocks */

/* Problem */

/* nav .problem { */
/*   border-color: #CBCBCB; */
/* } */

div[id=" problem"] {
  background-color: #CBCBCB !important;
  color: #444;
}

div[id=" problem"] a {
  color: #444;
}

div[id="problem"] .sectiondivider {
  color: #CBCBCB;
}

/* Solution */

/* nav .solution { */
/*     border-color: ; */
/* } */

/* div[id="solution"] { */
/*     background-color: !important; */
/*     color: ; */
/* } */

/* div[id="solution"] a { */
/*     color: ; */
/* } */

/* div[id="solution"] .sectiondivider { */
/*     color: ; */
/* } */

/* END of post blocks color configuration */

nav ul li {
    padding: 3px 15px;
}

.videoWrapper {
	  position: relative;
	  padding-bottom: 56.25%; /* 16:9 */
	  padding-top: 25px;
	  height: 0;
    top: 50%;
    transform: translateY(+5%);
}
.videoWrapper iframe {
	  position: absolute;
	  top: 0;
	  left: 0;
	  width: 100%;
	  height: 100%;
}

@media only screen and (max-width: 680px) {
  nav ul li {
    padding: 3px 3px;
  }

  .videoWrapper {
	    position: relative;
	    padding-bottom: 56.25%; /* 16:9 */
	    padding-top: 25px;
	    height: 0;
      top: 50%;
      transform: translateY(-5%);
  }
}
#intro {
  padding: 210px 0 100px 0;
}
@media only screen and (max-width: 960px) {
  .disappear {
    display: none;
  }

  .videoWrapper {
	    position: relative;
	    padding-bottom: 56.25%; /* 16:9 */
	    padding-top: 25px;
	    height: 0;
      top: 50%;
      transform: translateY(-5%);
  }
}
@media only screen and (min-width: 960px) {
  .appear {
    display: none;
  }
}
.right {
  *zoom: 1;
  float: left;
  clear: none;
  text-align: inherit;
  width: 48.5%;
  margin-left: 0%;
  margin-right: 3%;
  text-align: center;

}
.right:before,
.right:after {
  content: '';
  display: table;
}
.right:after {
  clear: both;
}
.right:last-child {
  margin-right: 0%;
}
@media only screen and (max-width: 520px) {
  .right {
    display: block;
    clear: both;
    float: none;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
  .right:first-child {
    margin-left: auto;
  }
  .right:last-child {
    margin-right: auto;
  }
}
.right p {
  text-align: center;
}
.left {
  *zoom: 1;
  float: left;
  clear: none;
  text-align: inherit;
  width: 48.5%;
  margin-left: 0%;
  margin-right: 3%;
}
.left:before,
.left:after {
  content: '';
  display: table;
}
.left:after {
  clear: both;
}
.left:last-child {
  margin-right: 0%;
}
@media only screen and (max-width: 520px) {
  .left {
    display: block;
    clear: both;
    float: none;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
  .left:first-child {
    margin-left: auto;
  }
  .left:last-child {
    margin-right: auto;
  }
}
#proposal,
#ceremony,
#reception,
#weddingparty,
#lodging,
#registries,
#venue,
#story,
#todo,
#greet {
  padding: 50px 0;
}
#proposal img {
  *zoom: 1;
  float: left;
  clear: none;
  text-align: inherit;
  width: 48.5%;
  margin-left: 0%;
  margin-right: 3%;
}
#proposal img:before,
#proposal img:after {
  content: '';
  display: table;
}
#proposal img:after {
  clear: both;
}
#proposal img:nth-child(2n) {
  margin-right: 0%;
  float: right;
}
#proposal img:nth-child(2n+1) {
  clear: both;
}
@media only screen and (max-width: 680px) {
  #proposal img {
    display: block;
    clear: both;
    float: none;
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    padding: 10px 0;
  }
  #proposal img:first-child {
    margin-left: auto;
  }
  #proposal img:last-child {
    margin-right: auto;
  }
}

